CR updates to Main & StudyInfo

--- a/PR/subsections/workingBrain_PR_StudyInfo.Rmd
+++ b/PR/subsections/workingBrain_PR_StudyInfo.Rmd
@@ -1,3 +1,8 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 ## Background 
 
 Work takes up a huge chunk of our adult lives: the average Briton works approximately $42$ hours per week [@TUC1], with an additional ~4.9 hours spent on commuting [@TUC2], and an estimate of ~10.1 hours in unpaid overtime [@TotallyMoney]. These numbers have been growing in the past 30 years [@TUC1; @TUC2; @TotallyMoney] without benefits to productivity. Importantly, a growing body of evidence suggests a strong negative impact on our health and wellbeing. Long working hours are associated with a higher risk of cardiovascular disease [@Bannai2014], higher incidence of depressive [@Kim2016], and anxiety symptoms [@Bannai2014], deficient cognitive function [@Kajitani2018], and adverse physiological changes [@VanderHulst2003]. Moreover, interventional studies show that a reduction in working hours benefits both health and productivity [@Akerstedt2001; @Barck-Holst2017]. However, we do not yet understand the neurobiological implications of our modern, increasingly intense, working patterns. Three reasons motivate the need for such an understanding: 
@@ -25,13 +30,13 @@ Progress against these objectives will help develop a holistic insight into why 
 
 ## Rationale
 
-Until recently the impact of working patterns on our neurophysiology has been overlooked, therefore our investigative plan does not build directly and comprehensively on prior work. However, we have identified inadequate sleep as one principal means through which the influence of occupational factors on wellbeing is likely to manifest. First, relative to all other activities, work is the primary waking activity exchanged for sleep [@Basner2014]. Second, it is becoming increasingly common for workers to accumulate sleep debt throughout the working week and attempt to catch-up on the weekend, a countermeasure that has been shown to be ineffective in combating the deleterious effects of weekday sleep debt [@Basner2018; @Simpson2016; @Reinhardt2016; @Buxton2010]. Finally, working longer hours is associated with significantly reduced sleep duration and quality [@Marucci-Wellman2016, @VanderHulst2003]. Therefore, we will use the known neuronal and physiological mechanisms of sleep, and in particular sleep restriction, to help guide the incipient stage of our investigation.
+The impact of working patterns on our neurophysiology is still not comprehensively understood; therefore our investigative plan does not build solely and directly on prior work in this specific arena. However, we have identified inadequate sleep as one principal means through which the influence of occupational factors on wellbeing is likely to manifest. First, relative to all other activities, work is the primary waking activity exchanged for sleep [@Basner2014]. Second, it is  increasingly common for workers to accumulate sleep debt throughout the working week and attempt to catch-up on the weekend, a countermeasure that has been shown to often be ineffective in combating the deleterious effects of weekday sleep debt [@Basner2018; @Simpson2016; @Reinhardt2016; @Buxton2010]. Finally, working longer hours is associated with significantly reduced sleep duration and quality [@Marucci-Wellman2016, @VanderHulst2003]. Therefore, we will use the known neuronal and physiological mechanisms of sleep, and in particular sleep restriction, to help guide the incipient stage of our investigation.
 
-A multitude of bodily systems react to and interact with sleep-loss, a key set being the body’s inflammatory response, and in particular increased expression of proinflammatory cytokines. Sleep restriction studies have consistently found increased levels of interleukin-6 [IL-6; a known risk factor for depression @Howren2009] in response to restricted sleep [@Reinhardt2016], an effect that is resilient to recovery sleep [@Simpson2016]. One mechanism by which this altered inflammatory response affects cognitive and affective processing is via the interoceptive system [@Critchley2013]. Afferent signals from peripheral nerves that embed visceral organs communicate to the brain what is happening physiologically in the body, including sensing inflammation. Interoception interacts with many other cognitive processes, such that our bodily feelings determine the way we behave [@Critchley2017; @Rae2018]. Altogether, this suggests that inflammation, via interoception, can drive how we feel and ultimately how we act. 
+A multitude of bodily systems react to and interact with sleep-loss, a key set being the body’s inflammatory response, and in particular increased expression of proinflammatory cytokines. Sleep restriction studies have consistently found increased levels of interleukin-6 [IL-6; a known risk factor for depression @Howren2009] in response to restricted sleep [@Reinhardt2016], an effect that is resilient to recovery sleep [@Simpson2016]. One mechanism by which this altered inflammatory response affects cognitive and affective processing is via the interoceptive system [@Critchley2013]. Afferent signals from peripheral nerves that embed visceral organs communicate to the brain what is happening physiologically in the body, including sensing inflammation. Interoception interacts with many other cognitive processes, such that our bodily feelings guide the way we behave [@Critchley2017; @Rae2018]. Altogether, this suggests that inflammation, via interoception, can drive how we feel and ultimately how we act. 
 
-Neurally, the most consistent findings associated with inadequate sleep are: (i) amygdala hyper-reactivity to aversive stimuli [@Yoo2007a; @Motomura2014]; (ii) disconnect between frontal regions and the amygdala, as well as the basal ganglia [@Yoo2007a; @Motomura2013; @Prather2013; @Zhao2018]; (iii) altered structure and function in the fronto-parietal network [@Cui2015; @Krause2017]. Furthermore, given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be a key mediator of the neurophysiological changes that result from chronic sleep restriction [@Critchley2013; @Critchley2017; @Rae2018; @Ma2015]. However, very few studies directly investigate interactions between work patterns, inadequate sleep, and physiology, with even fewer further assessing neurobiological changes in the same context. 
+Neurally, the most consistent findings associated with inadequate sleep are: (i) amygdala hyper-reactivity to aversive stimuli [@Yoo2007a; @Motomura2014]; (ii) disconnect between frontal regions and the amygdala, as well as the basal ganglia [@Yoo2007a; @Motomura2013; @Prather2013; @Zhao2018]; (iii) altered structure and function in the fronto-parietal network [@Cui2015; @Krause2017]. Furthermore, given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be a key mediator of the neurophysiological changes that result from chronic sleep restriction [@Critchley2013; @Critchley2017; @Rae2018; @Ma2015]. However, few studies that directly investigate interactions between work patterns, inadequate sleep, and physiology, further assess neurobiological changes in the same context. 
 
-This project will address the resulting gaps in the literature using a combination of population neuroscience and epidemiological methods. We will begin by identifying neural markers of occupational wellbeing in the UK Biobank cohort: a population-based prospective study of ~500,000 individuals, a subset of which completed an imaging follow-up, including both task [i.e. emotional face perception; @Hariri2002a] and resting-state functional Magnetic Resonance Imaging (fMRI) [@Sudlow2015]. Following approval by the UK Biobank Access Committee (Project ref. no.: 62188), brain imaging data (i.e. task and resting functional brain MRI data) will be obtained for 35,501 participants, together with blood biochemistry assay results relevant to inflammation (i.e. C-reactive protein) and a curated selection of employment, sociodemographic, lifestyle and health-related information collected through questionnaires, verbal interviews and census data (e.g. Townsend Deprivation Scores). Details concerning the data analysis strategy can be found under the *Multifactorial analysis strategy* section below. 
+This project will address the resulting gaps in the literature using a combination of population neuroscience and epidemiological methods. We will identify neural markers of occupational wellbeing in the UK Biobank cohort: a population-based prospective study of ~500,000 individuals, a subset of which completed an imaging follow-up, including both task [i.e. emotional face perception; @Hariri2002a] and resting-state functional Magnetic Resonance Imaging (fMRI) [@Sudlow2015]. Following approval by the UK Biobank Access Committee (Project ref. no.: 62188), brain imaging data (i.e. task and resting functional brain MRI data) will be obtained for 35,501 participants, together with blood biochemistry assay results relevant to inflammation (i.e. C-reactive protein) and a curated selection of employment, sociodemographic, lifestyle and health-related information collected through questionnaires, verbal interviews and census data (e.g. Townsend Deprivation Scores). Details concerning the data analysis strategy can be found under the *Multifactorial analysis strategy* section below. 
 
 
 \newpage
@@ -67,20 +72,20 @@ This project will address the resulting gaps in the literature using a combinati
 
 ## Multifactorial analysis strategy
 
-In order to determine how particular work patterns are associated with neural markers, immune function, and cognition, we need to first understand how numerous non-imaging/-physiological variables inter-relate in our Biobank dataset. This includes employment, sociodemographic, lifestyle, and health-related information. The complete list of data fields requested can be found at http://tiny.cc/UKBBMetaData_62188 (N.B.:"Participants" attribute refers to total participants in the cohort with information in the selected "Field", not the number of participants in the dataset linked to the current project).
+In order to determine how particular work patterns are associated with neural markers, immune function, and cognition, we need to first understand how numerous non-imaging/-physiological variables inter-relate in our Biobank dataset. This includes employment, sociodemographic, lifestyle, and health-related information. The complete list of data fields requested from the Biobank for this project can be found at http://tiny.cc/UKBBMetaData_62188 (N.B.:"Participants" attribute refers to total participants in the cohort with information in the selected "Field", not the number of participants in the dataset linked to the current project).
 
-It is plausible that, for example, number of hours worked ('*Length of working week for main job*') covaries in multiple, likely nonlinear, ways, with other employment variables (such as commute time, '*distance between home and workplace*' & '*frequency of travelling*'), and with numerous variables from other categories. This means that if we wish to test for a specific effect between hours worked and neural function, for example, it may be challenging to conclude that a neural characteristic is attributable to hours worked, without accounting in some manner for these related variables. Even in the imaging data alone, it is clear that numerous quality-related metrics such as head motion, acquisition date and time, and scanner configuration act as potential confounders [@Smith2020]
+It is plausible that, for example, number of hours worked ('*Length of working week for main job*') covaries in multiple, likely nonlinear, ways, with other employment variables (such as commute time, '*distance between home and workplace*' & '*frequency of travelling*'), and with numerous variables from other categories such as sociodemographic, lifestyle, and health-related information. This means that if we wish to test for a specific effect between hours worked and neural function, for example, it may be challenging to conclude that a neural characteristic is attributable to hours worked, without accounting in some manner for these related variables. Even in the imaging data alone, it is clear that numerous quality-related metrics such as head motion, acquisition date and time, and scanner configuration act as potential confounders [@Smith2020].
 
 Therefore, prior to analysing the imaging and physiological data, we will undertake a comprehensive investigation of how employment variables (e.g. '*Length of working week for main job*'; Biobank Field ID: 767) relate to sociodemographic, lifestyle, and health-related information, in our dataset of $n=35,501$ individuals. To do so, we plan to use multivariate analysis techniques, incorporating machine learning methods, potentially applying a Canonical Correlational Analysis (CCA) approach.
 
-A complete and full picture of these relationships is, although very much worthy of scientific merit, not our primary and only goal, and also a lengthier and more detailed process than is within our present remit. We aim to characterise sufficiently the strongest inter-relations of employment variables with sociodemographic, lifestyle, and health-related information, and the nature of their association (e.g. linear, U-shape function). This will be a standalone piece of work, but also form the preliminary stage to the investigation of brain, body and behavioural markers of occupational wellbeing, to which the above-stated hypotheses relate. For example, we may use variables that show a strong, linear relation to number of hours worked as covariates in mass univariate General Linear Models when analysing the Hariri task fMRI. Other ways in which we utilise the picture of employment and other non-imaging/-physiology variables in our analyses of the imaging and physiology data will evolve as we proceed through the project.
+A complete and full picture of these relationships is, although very much worthy of scientific merit, not our primary and only goal, and also a lengthier and more detailed process than is within our present remit. We aim to characterise sufficiently the strongest inter-relations of employment variables with sociodemographic, lifestyle, and health-related information, and the nature of their association (e.g. linear, U-shape function). This will be a standalone piece of work, but also form the preliminary stage to the investigation of brain, body and behavioural markers of occupational wellbeing, to which the above-stated hypotheses relate. For example, we may use variables that show a strong, linear relation to number of hours worked as covariates in mass univariate General Linear Models when analysing the Hariri task fMRI. Other ways in which we utilise the picture of employment and other non-imaging/-physiology variables in our analyses of the imaging and physiology data will evolve as we proceed through the project, and will be recounted in successive updates to this present preregistration document.
 
 
 \newpage
 
 ## Multistage preregistration plan
 
-We intend to successively update our preregistration documentation as we proceed through each analysis step in this project. This document (dated XXX) forms the first document in this series. As we complete data analysis stages, we will be able to prescribe increasingly specific hypotheses, and refine our original broad imaging and physiological analysis approaches set out in earlier preregistration documentation, to increasingly more precise plans. This will include an evolution of expected statistical approaches as the multifactorial complexities of our dataset reveal themselves in relation to our specific questions about brain, body and behavioural markers of occupational wellbeing. For example, we anticipate the possibility of applying a Canonical Correlational Analysis (CCA) approach, but as of yet do not have specific applications or software to preregister. 
+We intend to successively update our preregistration documentation as we proceed through each analysis step in this project. This document (dated 26th August 2020) forms the first document in this series. As we complete data analysis stages, we will be able to prescribe increasingly specific hypotheses, and refine our original broad imaging and physiological analysis approaches set out in earlier preregistration documentation, to increasingly more precise plans. This will include an evolution of expected statistical approaches as the multifactorial complexities of our dataset reveal themselves in relation to our specific questions about brain, body and behavioural markers of occupational wellbeing. For example, we anticipate the possibility of applying a Canonical Correlational Analysis (CCA) approach, but as of yet do not have specific applications or software to preregister. 
 
 We will seek to timestamp our data logs and analysis records, and provide updated pregregistration documents in a public repository, such that the evolutionary timeline is indicative of a commitment to preregistration principles, (i.e. to guard against questionable research practices), while taking account of the multi-stage and complex nature of this project.
 
